<resources>
    <string name="app_name">League Standings</string>
    <string name="match_played">P</string>
    <string name="match_won">W</string>
    <string name="match_draw">D</string>
    <string name="match_lost">L</string>
    <string name="points">Pts</string>
    <string name="recent_month">Recent Wins in 30 days</string>
    <string name="standings">Standings</string>
    <string name="recentwins">Recent Wins</string>
</resources>
