<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/header_layout"
    >

    <TextView
        android:id="@+id/season_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        tools:text="REGULAR SEASON" />
    <View
        android:layout_width="10dp"
        android:layout_height="0dp"
        tools:background="@color/black"/>

    <TextView
        android:id="@+id/match_played"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_played"/>
    <TextView
        android:id="@+id/match_won"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_won" />
    <TextView
        android:id="@+id/match_draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/match_draw" />
    <TextView
        android:id="@+id/match_lost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/match_lost" />
    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/points" />
</LinearLayout>
